[tool.poetry]
name = "qe_test_gen"
version = "0.1.0"
description = "Generates QE Genny test descriptions"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "qe_test_gen"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
numpy = "^1.24.1"
jinja2 = "^3.1.3"
pandas = "^1.5.3"
faker = "^16.8.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = 'qe_test_gen\/.*\.pyi?$'